--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "restify": "^4.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.6.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "flow-bin": "^0.37.4",
@@ -25,6 +26,8 @@
     "gulp-clean-css": "^2.3.2",
     "gulp-htmlmin": "^3.0.0",
     "gulp-nunjucks": "^3.0.0",
+    "gulp-postcss": "^6.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
     "jasmine": "^2.5.3",
