--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^6.6.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "flow-bin": "^0.37.4",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.3.2",
@@ -36,6 +37,9 @@
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^3.1.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.1",
     "webpack": "^1.14.0",
     "webpack-merge": "^2.4.0"
   }
