--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "debug": "^2.6.0",
     "dotenv": "^4.0.0",
+    "mime": "^1.3.4",
     "moment": "^2.17.1",
+    "pg": "^6.1.2",
     "request": "^2.79.0",
     "restify": "^4.3.0",
     "sse-nodejs": "^0.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
+    "axios": "^0.15.3",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "chart.js": "^1.1.1",
     "flow-bin": "^0.37.4",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.3.2",
@@ -36,8 +40,9 @@
     "gulp-util": "^3.0.8",
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
-    "jasmine-spec-reporter": "^3.1.0",
+    "jasmine-spec-reporter": "^3.2.0",
     "react": "^15.4.2",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.1",
     "webpack": "^1.14.0",
