--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "chart.js": "^1.1.1",
+    "classnames": "^2.2.5",
     "flow-bin": "^0.37.4",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.3.2",
