--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,11 @@ server {
         proxy_pass http://backend_app;
     }
 
+    location ~ ^/api {
+        proxy_pass http://backend_app;
+        # TODO Add password restrict
+    }
+
     location /sse {
         proxy_pass http://backend_app;
         proxy_http_version 1.1;
