--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react": "^15.4.2",
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
+    "redux": "^3.6.0",
     "webpack": "^1.14.0",
     "webpack-merge": "^2.4.0"
   }
