--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^3.2.0",
+    "qrcode-reader": "^0.2.2",
     "react": "^15.4.2",
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.4.2",
