--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^3.2.0",
+    "jquery": "^2.2.4",
     "qrcode-reader": "^0.2.2",
     "react": "^15.4.2",
     "react-chartjs": "^0.8.0",
@@ -49,6 +50,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "redux": "^3.6.0",
+    "toastr": "^2.1.2",
     "webpack": "^1.14.0",
     "webpack-merge": "^2.4.0"
   }
