--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
+    "babel-preset-env": "^1.1.8",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "debug": "^2.6.0",
