--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "plugins": ["transform-flow-strip-types"],
-  "presets": [
-    ["env", {
-      "target": {
-        "node": true
-      }
-      }]
-  ]
+  "plugins": ["transform-flow-strip-types"]
 }
