--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
-    "babel-preset-env": "^1.1.8",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "debug": "^2.6.0",
@@ -28,6 +27,7 @@
     "autoprefixer": "^6.6.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-modern-browsers": "^7.0.0",
     "babel-preset-react": "^6.16.0",
     "chart.js": "^1.1.1",
     "classnames": "^2.2.5",
