Add ssl cert for development

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,13 @@ upstream backend_app {
 }
 server {
     listen       8000;
+    listen       8443 ssl http2;
     server_name  event.tonyhhyip.me;
+
+    ssl_certificate /app/hkoscon/app/certs/server.crt;
+    ssl_certificate_key /app/hkoscon/app/certs/server.key;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
 
     location / {
         root   /app/hkoscon/app/public;
@@ -35,4 +41,3 @@ server {
     }
 
 }
-
