--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node bin/app.js",
     "build": "gulp build",
     "dev": "gulp dev",
-    "test": "flow check && jasmine"
+    "test": "flow check && yarn test-frontend",
+    "test-frontend": "jest --config jest.frontend.json",
+    "test-backend": "jest --config jest.backend.json"
   },
   "dependencies": {
     "babel-cli": "^6.18.0",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-modern-browsers": "^8.0.0",
@@ -40,9 +43,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
-    "jasmine": "^2.5.3",
-    "jasmine-core": "^2.5.2",
-    "jasmine-spec-reporter": "^3.2.0",
+    "jest-cli": "^18.1.0",
     "jquery": "^2.2.4",
     "qrcode-reader": "^0.2.2",
     "react": "^15.4.2",
@@ -50,7 +51,9 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
+    "react-test-renderer": "^15.4.2",
     "redux": "^3.6.0",
+    "serviceworker-webpack-plugin": "^0.1.8",
     "toastr": "^2.1.2",
     "webpack": "^1.14.0",
     "webpack-merge": "^2.4.0"
