Add Service Worker Scope

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,7 @@ server {
         root   /app/hkoscon/app/public;
         index  index.html;
         try_files $uri $uri/ /index.html;
+        add_header "Service-Worker-Allowed" "/";
     }
 
     location ~ ^/dashboard {
