--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ upstream backend_app {
 }
 server {
     listen       8000;
-    listen       8443 ssl http2;
+    listen       8443 ssl http2 spdy;
     server_name  event.tonyhhyip.me;
 
     ssl_certificate /app/hkoscon/app/certs/server.crt;
