Change nginx config for production

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,9 @@ upstream backend_app {
     server localhost:8080;
 }
 server {
-    listen       8000;
-    listen       8443 ssl http2 spdy;
-    server_name  event.tonyhhyip.me;
+    listen       80;
+    listen       443 ssl http2 spdy;
+    server_name  event.hkoscon.org;
 
     ssl_certificate /app/hkoscon/app/certs/server.crt;
     ssl_certificate_key /app/hkoscon/app/certs/server.key;
