--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,8 @@ server {
     location ~ ^/dashboard {
         root   /app/hkoscon/app/public;
         try_files /index.html =404;
+        auth_basic "Restricted Content";
+        auth_basic_user_file /app/hkoscon/app/.htpasswd;
     }
 
     location ~ ^/(eventbrite) {
@@ -29,7 +31,6 @@ server {
 
     location ~ ^/api {
         proxy_pass http://backend_app;
-        # TODO Add password restrict
     }
 
     location /sse {
