--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.17.1",
     "redis": "^2.6.5",
     "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "sse-nodejs": "^0.0.6"
   },
   "devDependencies": {
@@ -33,8 +34,8 @@
     "babel-loader": "^6.2.10",
     "babel-preset-modern-browsers": "^8.0.0",
     "babel-preset-react": "^6.16.0",
-    "chart.js": "^1.1.1",
     "classnames": "^2.2.5",
+    "firebase": "^3.6.7",
     "flow-bin": "^0.38.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.3.2",
@@ -48,7 +49,6 @@
     "jquery": "^2.2.4",
     "qrcode-reader": "^0.2.2",
     "react": "^15.4.2",
-    "react-chartjs": "^0.8.0",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
@@ -56,7 +56,7 @@
     "redux": "^3.6.0",
     "serviceworker-webpack-plugin": "^0.1.8",
     "toastr": "^2.1.2",
-    "webpack": "^1.14.0",
+    "webpack": "^2.2.1",
     "webpack-merge": "^2.4.0"
   }
 }
