--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "moment": "^2.17.1",
     "redis": "^2.6.5",
     "request": "^2.79.0",
-    "request-promise": "^4.1.1",
-    "sse-nodejs": "^0.0.6"
+    "request-promise": "^4.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
