Add security setup

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,15 @@
 upstream backend_app {
     server localhost:8080;
 }
+
 server {
-    listen       80;
-    listen       443 ssl http2 spdy;
+    listen      80;
+    server_name event.hkoscon.org;
+    return      301 https://event.hkoscon.org$request_uri;
+}
+
+server {
+    listen       443 ssl http2;
     server_name  event.hkoscon.org;
 
     ssl_certificate /app/hkoscon/app/certs/server.crt;
@@ -13,9 +19,12 @@ server {
 
     location / {
         root   /app/hkoscon/app/public;
-        index  index.html;
-        try_files $uri $uri/ /index.html;
         add_header "Service-Worker-Allowed" "/";
+        try_files $uri $uri/ =404;
+    }
+
+    location = / {
+        return 302 /dashboard;
     }
 
     location ~ ^/dashboard {
@@ -26,7 +35,10 @@ server {
     }
 
     location ~ ^/(eventbrite) {
-        proxy_pass http://backend_app;
+        if ($http_user_agent ~* "^Eventbrite Webhooks") {
+            proxy_pass http://backend_app;
+        }
+        return 401;
     }
 
     location ~ ^/api {
