Fix nginx user agent blocking

--- a/nginx.conf
+++ b/nginx.conf
@@ -35,10 +35,10 @@ server {
     }
 
     location ~ ^/(eventbrite) {
-        if ($http_user_agent ~* "^Eventbrite Webhooks") {
-            proxy_pass http://backend_app;
+        if ($http_user_agent !~ "Eventbrite Webhooks") {
+            return 403;
         }
-        return 401;
+        proxy_pass http://backend_app;
     }
 
     location ~ ^/api {
