--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^2.6.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "js-yaml": "^3.7.0",
     "moment": "^2.17.1",
     "redis": "^2.6.5",
     "request": "^2.79.0",
