--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,7 @@
         "source": "**",
         "headers": [
           {
-            "key": "X-Xss-Protection",
+            "key": "X-XSS-Protection",
             "value": "1; mode=block"
           },
           {
@@ -22,10 +22,6 @@
           {
             "key": "X-Content-Type-Options",
             "value": "nosniff"
-          },
-          {
-            "key": "Service-Worker-Allowed",
-            "value": "/"
           }
         ]
       }
