--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "test:backend:watch": "yarn test:backend --watch"
   },
   "dependencies": {
-    "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "bluebird": "^3.4.7",
@@ -24,6 +23,7 @@
     "express": "^4.14.0",
     "js-yaml": "^3.7.0",
     "moment": "^2.17.1",
+    "react-webcam": "^0.0.14",
     "redis": "^2.6.5",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
@@ -54,7 +54,7 @@
     "react-router": "^3.0.1",
     "react-test-renderer": "^15.4.2",
     "redux": "^3.6.0",
-    "serviceworker-webpack-plugin": "^0.1.8",
+    "serviceworker-webpack-plugin": "^0.2.0",
     "toastr": "^2.1.2",
     "webpack": "^2.2.1",
     "webpack-merge": "^2.4.0"
