--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "^2.6.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "firebase-admin": "^4.1.2",
     "js-yaml": "^3.7.0",
     "moment": "^2.17.1",
     "react-webcam": "^0.0.14",
