--- a/process.yml
+++ b/process.yml
@@ -11,6 +11,16 @@ apps:
     env_production:
       NODE_ENV: production
 
+  - script: bin/production.js
+      name: hkoscon-production
+      interpreter_args: "--harmony"
+      watch:
+        - src
+        - bin
+      env_production:
+        NODE_ENV: production
+      watch: false
+
   - script: node_modules/.bin/gulp
     name: gulp-build
     interpreter_args: "--harmony"
