--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase-admin": "^4.1.2",
     "js-yaml": "^3.7.0",
     "moment": "^2.17.1",
+    "moment-timezone": "^0.5.11",
     "react-webcam": "^0.0.14",
     "redis": "^2.6.5",
     "request": "^2.79.0",
