--- a/functions/package.json
+++ b/functions/package.json
@@ -5,6 +5,7 @@
     "firebase-admin": "^4.1.2",
     "firebase-functions": "^0.5",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.11",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
   },
