Remove worker server

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "dev": "gulp dev",
     "test": "flow check && yarn test:frontend && yarn test:backend",
     "test:frontend": "jest --config jest.frontend.json",
-    "test:backend": "jest --config jest.backend.json",
     "test:frontend:watch": "yarn test:frontend --watch",
     "test:backend:watch": "yarn test:backend --watch"
   },
@@ -19,17 +18,20 @@
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
-    "debug": "^2.6.0",
+    "classnames": "^2.2.5",
     "dotenv": "^4.0.0",
-    "express": "^4.14.0",
-    "firebase-admin": "^4.1.2",
-    "js-yaml": "^3.7.0",
+    "firebase": "^3.6.7",
+    "jquery": "^2.2.4",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
+    "qrcode-reader": "^0.2.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.1",
     "react-webcam": "^0.0.14",
-    "redis": "^2.6.5",
-    "request": "^2.79.0",
-    "request-promise": "^4.1.1"
+    "redux": "^3.6.0",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
@@ -37,8 +39,6 @@
     "babel-loader": "^6.2.10",
     "babel-preset-modern-browsers": "^9.0.2",
     "babel-preset-react": "^6.16.0",
-    "classnames": "^2.2.5",
-    "firebase": "^3.6.7",
     "flow-bin": "^0.42.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.0",
@@ -48,17 +48,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
-    "jest-cli": "^19.0.2",
-    "jquery": "^2.2.4",
-    "qrcode-reader": "^0.2.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.1",
+    "jest": "^19.0.2",
     "react-test-renderer": "^15.4.2",
-    "redux": "^3.6.0",
     "serviceworker-webpack-plugin": "^0.2.0",
-    "toastr": "^2.1.2",
     "webpack": "^2.2.1",
     "webpack-merge": "^4.0.0"
   }
