--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "babel-core": "^6.21.0",
-    "babel-plugin-transform-flow-strip-types": "^6.21.0",
+    "babel-preset-flow": "^6.23.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
