Add Ticket Scanning System

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "qrcode-reader": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-qr-reader": "^1.1.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "react-webcam": "^0.2.0",
