Add saving T-shirt picking

--- a/assets/data/manifest.json
+++ b/assets/data/manifest.json
@@ -3,10 +3,18 @@
   "short_name": "HKOSCon Dashboard",
   "start_url": "/dashbaord",
   "display": "standalone",
-  "icons": [{
-    "src": "https://hkoscon.org/logo.png",
-    "type": "images/png"
-  }],
+  "icons": [
+    {
+      "src": "https://hkoscon.org/logo.png",
+      "size": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "https://hkoscon.org/logo.png",
+      "size": "144x144",
+      "type": "image/png"
+    }
+  ],
   "background_color": "#294454",
   "theme_color": "#F3CB02",
   "gcm_sender_id": "103953800507"
